# utaki-tick-data-platform

./: .gitattributes  .gitignore  AGENTS.md  README.md  env.local.example  go.mod  go.sum  mise.toml  pyproject.toml
.agent/: tick-data-platform-execplan-revised.md  tick-gateway-provider-fx-refactor-spec.md  tick-gateway-r2-windows-spec.md
.github/workflows/: check.yml  linux-race.yml  windows-race.yml
cmd/tick-api/: main.go
cmd/tick-gateway/: main.go  prune.go  prune_test.go  status_test.go
cmd/tick-verify/: main.go  main_test.go
cmd/tickctl/: main.go  main_test.go
docs/api/: tick-api-v1.md
docs/architecture/: repository-layout.md
docs/operations/: m4-production-operations.md  mt5-24h-soak.md  multi-scope.md  r2-smoke.md  real-r2-smoke.md
docs/plan/: roadmap.md
docs/tooling/: mise.md
docs/verification/: m0-protocol-v1.md  m1-local-tcp.md  m2-local-raw-wal.md  m2-raw-offhost-delivery.md  m4-external-evidence-template.md  m4-external-gates.md  m4-final-audit.md  (+1 more)
execplan/: 2026-07-15-m2-local-raw-wal.md  2026-07-15-m2-raw-offhost-delivery.md  2026-07-15-m3-3a-publication-redesign.md  2026-07-15-m3-replay-parquet-delivery.md  2026-07-15-review-fixes.md  2026-07-16-gateway-r2-runtime-fx.md  2026-07-16-m4-production-operations-http-delivery.md  2026-07-16-r2-sdk-publication-boundary.md
local/: README.md  tick-api.toml.example  tick-gateway-smoke.toml.example  tick-gateway.toml.example  tick-reader.toml.example  tick-retention.toml.example
producers/: README.md
tools/: tick-data-tools.lock.toml  tick_fixture_verify.py  tick_protocol.py
(+229 files in other folders)
