[project]
name = "tick-data-platform-tools"
version = "0.1.0"
description = "Independent fixture and invariant checks for tick-data-platform"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "ruff>=0.14,<0.15",
]
